# leaf-traits

./: .gitignore  README.md  pyproject.toml  requirements.txt  session_store.db  stats.json
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml  parameters_leaftraits.yml  parameters_leaftraits_inference.yml
docs/source/: conf.py  index.rst  leaf_traits.pipelines.data_processing.rst  leaf_traits.pipelines.leaftraits.rst  leaf_traits.pipelines.leaftraits_inference.rst  leaf_traits.pipelines.rst  leaf_traits.rst  modules.rst
mlruns/0/: meta.yaml
mlruns/0/3ab0f9ca9e6343caa6dc5453b6528d3d/: meta.yaml
mlruns/0/3ab0f9ca9e6343caa6dc5453b6528d3d/params/: feature_columns  image_path  model_name
mlruns/0/b86690b45ba541f091d08ad0f0508d2c/: meta.yaml
mlruns/0/f688d9799e1447efbaba9064da5f8b42/: meta.yaml
mlruns/213346103689971730/: meta.yaml
mlruns/213346103689971730/ce3e11a0c14f49c586d1fecf5051f67b/: meta.yaml
models/: model_builders.py
notebooks/: experiments.ipynb  get_data.ipynb  planttraits2024-eda-training-pub.ipynb  resnet.ipynb
notebooks/scraps/: effnet_experiments.ipynb  get_data.ipynb  kaggle_example.ipynb
notebooks/scratches/: functions_testing.ipynb  get_indices.ipynb  kedro_pytorch.ipynb
src/: hooks.py
src/leaf_traits/: __init__.py  __main__.py  datasets.py  pipeline_registry.py  settings.py
src/utils/: data_setup.py  datasets.py  engine.py  loss_function.py  models.py  save_model.py
tests/: test_run.py
tests/pipelines/leaftraits/: fixtures.py  test_pipeline.py
tests/pipelines/leaftraits_inference/: test_pipeline.py
(+21 files in other folders)
