[tool.poetry]
name = "leaf-traits"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kedro = "^0.19.6"
kedro-viz = "^9.1.0"
kedro-datasets = {extras = ["pandas-csvdataset", "pandas-parquerdataset"], version = "^3.0.1"}
fsspec = "^2024.6.0"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "leaf_traits"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
leaf-traits = "leaf_traits.__main__:main"

[tool.kedro]
package_name = "leaf_traits"
project_name = "leaf-traits"
kedro_init_version = "0.19.6"
tools = [ "Testing", "Custom Logging", "Data Structure", "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/leaf_traits -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "leaf_traits.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
